Moved driver start and stop to it's own routines.

--- a/src/vscp/samples/node_js/node-red-node-vscp-events/package.json
+++ b/src/vscp/samples/node_js/node-red-node-vscp-events/package.json
@@ -1,7 +1,7 @@
 {
-    "name"          : "node-red-node-vscp-receive",
-    "version"       : "1.0.0",
-    "description"   : "A Node-RED node that received VSCP events form a VSCP Daemon.",
+    "name"          : "node-red-node-vscp-events",
+    "version"       : "0.0.1",
+    "description"   : "A Node-RED node that received VSCP events form the VSCP Daemon.",
     "dependencies"  : {
     },
     "repository" : {
@@ -9,7 +9,7 @@
         "url":"https://github.com/grodansparadis/vscp_software/tree/master/src/vscp/samples/node_js"
     },
     "license": "Apache",
-    "keywords": [ "node-red", "vscp", "event" ],
+    "keywords": [ "node-red", "vscp", "iot", "m2m", "receive", "event" ],
     "node-red"      : {
         "nodes"     : {
             "vscp-receive": "vscp-receive.js"
@@ -18,10 +18,6 @@
     "author": {
         "name": "Ake Hedman, Grodans Paradis AB",
         "email": "akhe@paradiseofthefrog.com",
-        "url": "http://www.vscp.org"
-    },
-    credentials: {
-        username: {type:"text"},
-        password: {type:"password"}
+        "url": "http://www.paradiseofthefrog.com"
     }
 }
